# kuberift

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: config.rs  cost.rs  items.rs  lib.rs  main.rs
src/k8s/: discovery.rs  resources.rs
tests/: config_test.rs  items_test.rs
