[package]
name = "kuberift"
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
description = "A fuzzy-first interactive Kubernetes resource navigator"
license = "MIT"
repository = "https://github.com/syedazeez337/kuberift"
homepage = "https://github.com/syedazeez337/kuberift"
keywords = ["kubernetes", "kubectl", "tui", "fuzzy", "k8s"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/*.gif", "docs/*.mp4", "docs/*.png", "wiki/", "contrib/", "tests/"]

[lib]
name = "kuberift"
path = "src/lib.rs"

[[bin]]
name = "kf"
path = "src/main.rs"

[dependencies]
# Fuzzy finder engine — default-features = false skips the skim CLI binary.
skim = { version = "3.5.0", default-features = false }

# TUI rendering — must match skim's ratatui version
ratatui = "0.30"

# Kubernetes client
kube = { version = "3.0.1", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }

# Async runtime — only the features actually used
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Async utilities (streaming pod lists)
futures = "0.3"

# TUI input events (re-used from skim's crossterm)
crossterm = "0.29"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI args + shell completions + man page generation
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

# Config file (Phase 1+)
toml = "1"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
